<resources>
    <string name="app_name">Empresas</string>
    <string name="btnLogin">ENTRAR</string>
    <string name="titleLogin">BEM-VINDO AO \nEMPRESAS</string>
    <string name="subtitleLogin">Lorem ipsum dolor sit amet, contetur \nadipiscing elit. Nunc accumsan.</string>
    <string name="edtEmailLogin">E-mail</string>
    <string name="edtSenhaLogin">Senha</string>
    <string name="logo_ioasys">Logo ioasys</string>
    <string name="companys_image">Company\'s image</string>
</resources>